# pmsampsize

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pmsampsize/: __init__.py  pmsampsize.py
tests/: test_pmsampsize.py
